gitops/services/base/supabase/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-auth
  namespace: supabase
  labels:
    app: supabase-auth
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: supabase-auth
  template:
    metadata:
      labels:
        app: supabase-auth
    spec:
      containers:
        - name: auth
          image: supabase/gotrue:v2.162.0
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - containerPort: 9999
