gitops/services/base/supabase/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: supabase-postgres
  namespace: supabase
  labels:
    app: supabase-postgres
spec:
  serviceName: supabase-postgres
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: supabase-postgres
  template:
    metadata:
      labels:
        app: supabase-postgres
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: supabase/postgres:15.1.1.47
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: managed-csi
        resources:
          requests:
            storage: 10Gi
