gitops/services/base/supabase/realtime-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-realtime
  namespace: supabase
  labels:
    app: supabase-realtime
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: supabase-realtime
  template:
    metadata:
      labels:
        app: supabase-realtime
    spec:
      containers:
        - name: realtime
          image: supabase/realtime:v2.29.3
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - containerPort: 4000
