gitops/services/base/supabase/studio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supabase-studio
  namespace: supabase
  labels:
    app: supabase-studio
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: supabase-studio
  template:
    metadata:
      labels:
        app: supabase-studio
    spec:
      containers:
        - name: studio
          image: supabase/studio:2024.06.10
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - containerPort: 3000
