gitops/services/base/supabase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supabase-kong
  namespace: supabase
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth/v1
            pathType: Prefix
            backend:
              service:
                name: supabase-kong
                port:
                  number: 80
          - path: /rest/v1
            pathType: Prefix
            backend:
              service:
                name: supabase-kong
                port:
                  number: 80
          - path: /realtime/v1
            pathType: Prefix
            backend:
              service:
                name: supabase-kong
                port:
                  number: 80
          - path: /storage/v1
            pathType: Prefix
            backend:
              service:
                name: supabase-kong
                port:
                  number: 80
